[package]
name = "solari-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
solari = { path = "../solari" }
solari-dmfr = { path = "../solari-dmfr" }
clap = { version = "4.3.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
rayon = "1.10.0"
serde_json = "1.0.96"
anyhow = "1.0"
reqwest = "0.11.18"
s2 = "0.0.12"
tracing-subscriber = "0.3.19"
