[package]
name = "solari-export-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
solari-transfers = { path = "../solari-transfers" }
solari-spatial = { path = "../solari-spatial" }
clap = { version = "4.3.0", features = ["derive"] }
anyhow = "1.0"
rkyv = "0.8.10"
redb = "2.3.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
