[package]
name = "solari-server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
solari = { path = "../solari" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
rocket = { version = "0.5.1", features = ["json", "serde_json"] }
s2 = "0.0.12"
tracing-subscriber = "0.3.19"
