[package]
name = "solari-test"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
solari = { path = "../solari" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
serde_json = "1.0.96"
anyhow = "1.0"
reqwest = "0.11.18"
s2 = "0.0.12"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = "0.10.0"
time = { version = "0.3.41", features = ["serde"] }
tempdir = "0.3.7"
similar = "2.7.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
