[package]
name = "solari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
enforce_invariants = []

[dependencies]
solari-geomath = { path = "../solari-geomath" }
solari-transfers = { path = "../solari-transfers" }
solari-spatial = { path = "../solari-spatial" }

anyhow = "1.0"
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = "0.10.0"
gtfs-structures = "0.43.0"
rstar = { version = "0.12", features = ["serde"] }
s2 = "0.0.12"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
bytemuck = { version = "1.13.1", features = ["derive"] }
memmap2 = "0.9.5"
rmp-serde = "1.3.0"
redb = "2.3.0"
futures = "0.3.31"
rayon = "1.10.0"
time = { version = "0.3.41", features = ["serde"] }
polyline = "0.11.0"
geo-types = "0.7"
geo = "0.29"
tracing = "0.1.41"
